@@ -1,3 +1,4 @@
+* #1720 Show the name of the wireless network to which we are connected. (tomeu)
 * #1888 Fix opening items from the clipboard. (tomeu)
 * #1984 Fix removing items from the clipboard. (tomeu)
 
